feat: Allow relative paths to custom log4j configs
Signed-off-by: Eamonn Mansour <47121388+eamansour@users.noreply.github.com>